--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,5 +3,10 @@ Flask==2.2.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+numpy==1.23.3
+pandas==1.4.4
+python-dateutil==2.8.2
 python-dotenv==0.21.0
+pytz==2022.2.1
+six==1.16.0
 Werkzeug==2.2.2
