--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "material-kit-react",
-  "author": "Devias IO",
+  "name": "henny-penny-data-analysis-tool",
+  "author": "Gemtec hackathon Team 2",
   "licence": "MIT",
   "version": "2.0.0",
   "private": false,
