--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,7 +1,7 @@
 FROM python:3.10
 WORKDIR /app
 
-COPY api/requirements.txt api/api.py api/.flaskenv ./
+COPY api/requirements.txt api/api.py api/.flaskenv api/hpe.pkl ./
 RUN pip install -r ./requirements.txt
 ENV FLASK_DEBUG 0
 
