--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -6,7 +6,8 @@ COPY ./src ./src
 COPY ./public ./public
 RUN npm install
 RUN npm run build
+RUN npm run export
 
 FROM nginx:stable-alpine
-COPY --from=build-step /app/build /usr/share/nginx/html
+COPY --from=build-step /app/out /usr/share/nginx/html
 COPY deployment/nginx.default.conf /etc/nginx/conf.d/default.conf
