--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-next": "12.0.3-canary.7"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
