--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,16 @@
 click==8.1.3
+colorama==0.4.5
+et-xmlfile==1.1.0
 Flask==2.2.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+numpy==1.23.3
+openpyxl==3.0.10
+pandas==1.4.4
+python-dateutil==2.8.2
 python-dotenv==0.21.0
+pytz==2022.2.1
+six==1.16.0
 Werkzeug==2.2.2
+Flask-Cors==3.0.10
