--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "licence": "MIT",
   "version": "2.0.0",
   "private": false,
+  "proxy": "http://localhost:5000",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -21,10 +22,13 @@
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
     "@mui/styles": "^5.0.2",
+    "better-sqlite3": "^7.6.2",
     "chart.js": "^3.5.1",
     "date-fns": "^2.25.0",
     "formik": "^2.1.5",
+    "fs": "^0.0.1-security",
     "history": "^5.0.0",
+    "knex": "^2.3.0",
     "next": "^12.0.3-canary.7",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
@@ -32,6 +36,8 @@
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
+    "sqlite3": "^5.1.0",
+    "swr": "^1.3.0",
     "uuid": "^8.3.0",
     "yup": "^0.32.9"
   },
